[project]
name = "ledgerlens-data"
version = "0.2.0"
description = "Data ingestion, fraud-detection engine, and feature pipeline for LedgerLens"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_return_any = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: marks tests as live Testnet integration tests (deselect with '-m not integration')",
    "slow: marks tests that run PPO training (deselect with '-m not slow')",
]
